Simplify: remove client-side minification
- Delete public/js/dist/ (minified files)
- Delete scripts/build.js (minification script)
- Update HTML to use source JS directly
- Simplify build script to just 'tsc'
- Remove terser and esbuild dependencies

Now only one dist/ folder (server TypeScript output, gitignored)

--- a/public/display.html
+++ b/public/display.html
@@ -191,9 +191,9 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/dist/logger.min.js"></script>
-  <script src="/js/dist/utils.min.js"></script>
-  <script src="/js/dist/sound.min.js"></script>
-  <script src="/js/dist/display.min.js"></script>
+  <script src="/js/logger.js"></script>
+  <script src="/js/utils.js"></script>
+  <script src="/js/sound.js"></script>
+  <script src="/js/display.js"></script>
 </body>
 </html>
