--- a/public/host-login.html
+++ b/public/host-login.html
@@ -49,8 +49,8 @@
     </div>
   </main>
 
-  <script src="/js/dist/logger.min.js"></script>
-  <script src="/js/dist/host-login.min.js"></script>
+  <script src="/js/logger.js"></script>
+  <script src="/js/host-login.js"></script>
 </body>
 </html>
 
