--- a/public/display.html
+++ b/public/display.html
@@ -190,10 +190,6 @@
     </div>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/logger.js"></script>
-  <script src="/js/utils.js"></script>
-  <script src="/js/sound.js"></script>
-  <script src="/js/display.js"></script>
+  <script type="module" src="/js/display.js"></script>
 </body>
 </html>
