--- a/public/host-login.html
+++ b/public/host-login.html
@@ -49,8 +49,7 @@
     </div>
   </main>
 
-  <script src="/js/logger.js"></script>
-  <script src="/js/host-login.js"></script>
+  <script type="module" src="/js/host-login.js"></script>
 </body>
 </html>
 
