--- a/public/host.html
+++ b/public/host.html
@@ -50,10 +50,7 @@
     </div>
   </main>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/logger.js"></script>
-  <script src="/js/utils.js"></script>
-  <script src="/js/host.js"></script>
+  <script type="module" src="/js/host.js"></script>
 </body>
 </html>
 
