--- a/public/play.html
+++ b/public/play.html
@@ -81,11 +81,7 @@
     <div class="error-text" id="errorText">An error occurred</div>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/logger.js"></script>
-  <script src="/js/utils.js"></script>
-  <script src="/js/sound.js"></script>
-  <script src="/js/play.js"></script>
+  <script type="module" src="/js/play.js"></script>
 </body>
 </html>
 
