feat: improve Stage 2 UX with clear transitions and terminology
- Add "CLICK AUCTION COMPLETE!" transition overlay between stages
- Show player's tap count before Fastest Finger begins
- Display score breakdown with reaction times and multipliers
- Use "Click Auction" and "Fastest Finger" terminology throughout
- Add multiplier badges (2x, 1.5x, 1.25x) to leaderboard
- Show reaction times on podium and results screens
- Add Stage 2 button styles with distinct colors

--- a/public/display.html
+++ b/public/display.html
@@ -101,7 +101,16 @@
 
   <!-- Countdown Overlay -->
   <div class="countdown-overlay" id="countdownOverlay">
+    <div class="countdown-label" id="countdownLabel">GET READY</div>
     <div class="countdown-number" id="countdownNumber">3</div>
+    <div class="countdown-sublabel" id="countdownSublabel"></div>
+  </div>
+
+  <!-- Stage Transition Overlay -->
+  <div class="stage-transition-overlay" id="stageTransitionOverlay">
+    <div class="stage-transition-icon">✅</div>
+    <div class="stage-transition-title" id="stageTransitionTitle">STAGE 1 COMPLETE!</div>
+    <div class="stage-transition-subtitle" id="stageTransitionSubtitle">Get ready for FASTEST FINGER...</div>
   </div>
 
   <!-- Winner Screen -->
