feat: tournament mode with cumulative scoring
Host Controls:
- New Game: Opens lobby, keeps existing player data
- Start: Begins the round
- Reset All: Clears ALL history and leaderboard

Cumulative Stats (ALL-TIME CHAMPIONS):
- Stage 1: Total taps across all rounds
- Stage 2: Best (fastest) reaction time ever
- Total: Cumulative final score with multipliers

LIVE BIDS shows only current game scores

--- a/public/display.html
+++ b/public/display.html
@@ -30,6 +30,14 @@
     <main id="main-content" class="content-area" role="main">
       <section class="leaderboard" aria-labelledby="alltime-title">
         <h2 class="leaderboard-title" id="alltime-title">🏆 ALL-TIME CHAMPIONS</h2>
+        <div class="leaderboard-header">
+          <span class="header-rank">#</span>
+          <span class="header-name">Player</span>
+          <span class="header-stage1">Stage 1</span>
+          <span class="header-stage2">Stage 2</span>
+          <span class="header-total">Total</span>
+          <span class="header-wins">Wins</span>
+        </div>
         <div class="leaderboard-list" id="allTimeList" role="list" aria-live="polite">
           <div class="empty-leaderboard">
             <div class="icon" aria-hidden="true">🏆</div>
