feat: VIOOH branding with loading animation and creatives
- Add loading screen on play page with VIOOH logo animation
- Random brand image shown during loading (turtle, robot, astronaut, chameleon)
- Brand slideshow on display sidebar with Ken Burns effect
- Winner billboard shows random creative image
- All 4 VIOOH brand images added to public/images/

--- a/public/display.html
+++ b/public/display.html
@@ -58,6 +58,14 @@
     </main>
 
     <aside class="sidebar" role="complementary" aria-label="Game information">
+      <!-- Brand Slideshow -->
+      <div class="brand-slideshow" id="brandSlideshow">
+        <img src="/images/turtle-wheels.png" alt="VIOOH Creative" class="slideshow-image active" data-index="0">
+        <img src="/images/robot-hand.png" alt="VIOOH Creative" class="slideshow-image" data-index="1">
+        <img src="/images/astronaut-fish.png" alt="VIOOH Creative" class="slideshow-image" data-index="2">
+        <img src="/images/chameleon-plug.png" alt="VIOOH Creative" class="slideshow-image" data-index="3">
+      </div>
+
       <section class="qr-section" aria-labelledby="qr-title">
         <h2 class="qr-title" id="qr-title">📱 SCAN TO PLAY</h2>
         <div class="qr-code">
@@ -156,6 +164,9 @@
               <div class="screen-bezel">
                 <div class="led-screen">
                   <div class="ad-winner-badge">🏆 WINNING BID</div>
+                  <div class="ad-creative" id="adCreative">
+                    <img src="/images/turtle-wheels.png" alt="Winner Creative" class="creative-image" id="creativeImage">
+                  </div>
                   <div class="ad-content" id="adContent">"Your Ad Here!"</div>
                   <div class="ad-author" id="adAuthor">— Winner</div>
                   <div class="billboard-brand">prDOOH • POWERED BY VIOOH</div>
