--- a/public/play.html
+++ b/public/play.html
@@ -12,6 +12,19 @@
   <link rel="stylesheet" href="/css/play.css">
 </head>
 <body>
+  <!-- Loading Screen -->
+  <div class="loading-screen" id="loadingScreen" role="status" aria-live="polite" aria-label="Loading">
+    <div class="loading-content">
+      <img src="/images/viooh-logo.svg" alt="VIOOH" class="loading-logo">
+      <div class="loading-visual">
+        <img src="/images/turtle-wheels.png" alt="" class="loading-image" id="loadingImage">
+      </div>
+      <div class="loading-text">
+        <span class="loading-dots">Connecting</span>
+      </div>
+    </div>
+  </div>
+
   <div class="bg" id="bg" aria-hidden="true"></div>
 
   <!-- Join Screen -->
