--- a/public/play.html
+++ b/public/play.html
@@ -17,7 +17,9 @@
     <div class="loading-content">
       <img src="/images/viooh-logo.svg" alt="VIOOH" class="loading-logo">
       <div class="loading-visual">
-        <img src="/images/turtle-wheels.png" alt="" class="loading-image" id="loadingImage">
+        <video class="loading-video" id="loadingVideo" autoplay muted loop playsinline>
+          <source src="/videos/Turtle_With_Wheels_Animation.mp4" type="video/mp4">
+        </video>
       </div>
       <div class="loading-text">
         <span class="loading-dots">Connecting</span>
