fix: use VIOOH SVG logo in footer branding

--- a/public/display.html
+++ b/public/display.html
@@ -107,7 +107,7 @@
 
     <footer role="contentinfo">
       <div class="footer-brand">
-        <span class="viooh">VIOOH</span>
+        <img src="/images/viooh-logo.svg" alt="VIOOH" class="footer-logo">
         <div class="footer-divider"></div>
         <div class="footer-tagline">THE GLOBAL <span class="pr">pr</span><span class="dooh">DOOH</span> PLATFORM</div>
       </div>
@@ -209,7 +209,7 @@
         </div>
 
         <div class="viooh-footer">
-          <div class="viooh-logo-text">VIOOH</div>
+          <img src="/images/viooh-logo.svg" alt="VIOOH" class="viooh-logo-img">
           <div class="viooh-divider"></div>
           <div class="viooh-subtitle">THE GLOBAL<br><span class="pr">pr</span><span class="dooh">DOOH</span> PLATFORM</div>
         </div>
