fix: loading screen now properly overlays entire page

--- a/public/play.html
+++ b/public/play.html
@@ -12,16 +12,16 @@
   <link rel="stylesheet" href="/css/play.css">
 </head>
 <body>
-  <!-- Loading Screen -->
+  <!-- Loading Screen - Fullscreen Video -->
   <div class="loading-screen" id="loadingScreen" role="status" aria-live="polite" aria-label="Loading">
     <div class="loading-content">
       <div class="loading-visual">
-        <video class="loading-video" id="loadingVideo" autoplay muted loop playsinline>
+        <video class="loading-video" id="loadingVideo" autoplay loop playsinline>
           <source src="/videos/Turtle_With_Wheels_Animation.mp4" type="video/mp4">
         </video>
       </div>
       <div class="loading-text">
-        <span class="loading-dots">Connecting</span>
+        <span class="loading-dots">Loading</span>
       </div>
     </div>
   </div>
