feat: VIOOH Emulator theme + updated game rules
Theme updates:
- Darker background (#010409)
- Card backgrounds (#161b22)
- Subtle teal borders
- Cleaner input/button styles
- Matches VIOOH Player Emulator look

Rules updated for two-stage gameplay:
- Stage 1: Click Auction
- Stage 2: Fastest Finger
- Multiplier scoring explained

--- a/public/display.html
+++ b/public/display.html
@@ -75,23 +75,23 @@
         <ol style="list-style: none;">
           <li class="rule">
             <span class="rule-icon" aria-hidden="true">📱</span>
-            <span>Scan QR code to join</span>
+            <span>Scan QR code to join as a DSP</span>
           </li>
           <li class="rule">
-            <span class="rule-icon" aria-hidden="true">✏️</span>
-            <span>Enter your name & ad message</span>
+            <span class="rule-icon" aria-hidden="true">🎯</span>
+            <span><strong>Stage 1:</strong> Click Auction - tap fast!</span>
           </li>
           <li class="rule">
-            <span class="rule-icon" aria-hidden="true">⏱️</span>
-            <span>Wait for auction to start</span>
+            <span class="rule-icon" aria-hidden="true">⚡</span>
+            <span><strong>Stage 2:</strong> Fastest Finger - react quick!</span>
           </li>
           <li class="rule">
-            <span class="rule-icon" aria-hidden="true">👆</span>
-            <span>TAP fast when it begins!</span>
+            <span class="rule-icon" aria-hidden="true">✖️</span>
+            <span>Top 3 reaction times get multipliers</span>
           </li>
           <li class="rule">
             <span class="rule-icon" aria-hidden="true">🏆</span>
-            <span>Most taps wins the billboard!</span>
+            <span>Highest combined score wins!</span>
           </li>
         </ol>
       </section>
