--- a/public/play.html
+++ b/public/play.html
@@ -20,9 +20,9 @@
     <p class="subtitle">Join as a DSP</p>
     
     <div class="rules-quick" role="list" aria-label="Quick rules">
-      <div class="rule-item" role="listitem">⏱️ <strong>Timed</strong> auction</div>
-      <div class="rule-item" role="listitem">👆 Tap = <strong>1 bid</strong></div>
-      <div class="rule-item" role="listitem">🏆 Most bids <strong>wins!</strong></div>
+      <div class="rule-item" role="listitem">🎯 <strong>Click</strong> Auction</div>
+      <div class="rule-item" role="listitem">⚡ <strong>Fastest</strong> Finger</div>
+      <div class="rule-item" role="listitem">🏆 <strong>Combined</strong> score wins!</div>
     </div>
     
     <form class="join-form" id="joinForm" onsubmit="joinGame(); return false;">
