refactor: rename stage1/stage2 to Click Auction/Fastest Finger
Replace all internal references to "stage1" and "stage2" with branded
terminology for clearer game mechanics:

Status values:
- countdown → auction_countdown
- bidding → auction
- stage2_countdown → fastestFinger_countdown
- stage2_tap → fastestFinger_tap

Config/variables:
- STAGE2_* → FASTEST_FINGER_*
- stage1Scores → auctionScores
- stage2StartTime → fastestFingerStartTime

Functions:
- startBidding() → startClickAuction()
- endStage1() → endClickAuction()
- startStage2Tap() → startFastestFingerTap()
- endStage2() → endFastestFinger()

CSS classes and UI text updated accordingly.

--- a/public/display.html
+++ b/public/display.html
@@ -33,8 +33,8 @@
         <div class="leaderboard-header">
           <span class="header-rank">#</span>
           <span class="header-name">Player</span>
-          <span class="header-stage1">Stage 1</span>
-          <span class="header-stage2">Stage 2</span>
+          <span class="header-auction">Auction</span>
+          <span class="header-finger">Finger</span>
           <span class="header-total">Total</span>
           <span class="header-wins">Wins</span>
         </div>
@@ -79,11 +79,11 @@
           </li>
           <li class="rule">
             <span class="rule-icon" aria-hidden="true">🎯</span>
-            <span><strong>Stage 1:</strong> Click Auction - tap fast!</span>
+            <span><strong>Click Auction:</strong> Tap fast to bid!</span>
           </li>
           <li class="rule">
             <span class="rule-icon" aria-hidden="true">⚡</span>
-            <span><strong>Stage 2:</strong> Fastest Finger - react quick!</span>
+            <span><strong>Fastest Finger:</strong> React quick for bonus!</span>
           </li>
           <li class="rule">
             <span class="rule-icon" aria-hidden="true">✖️</span>
@@ -117,7 +117,7 @@
   <!-- Stage Transition Overlay -->
   <div class="stage-transition-overlay" id="stageTransitionOverlay">
     <div class="stage-transition-icon">✅</div>
-    <div class="stage-transition-title" id="stageTransitionTitle">STAGE 1 COMPLETE!</div>
+    <div class="stage-transition-title" id="stageTransitionTitle">CLICK AUCTION COMPLETE!</div>
     <div class="stage-transition-subtitle" id="stageTransitionSubtitle">Get ready for FASTEST FINGER...</div>
   </div>
 
