--- a/public/play.html
+++ b/public/play.html
@@ -25,14 +25,14 @@
       <div class="rule-item" role="listitem">🏆 <strong>Combined</strong> score wins!</div>
     </div>
     
-    <form class="join-form" id="joinForm" onsubmit="if(window.joinGame){window.joinGame();return false;}">
+    <form class="join-form" id="joinForm" onsubmit="if(window.joinGame){window.joinGame();}return false;">
       <div class="input-group">
         <label for="playerName">Your DSP Name</label>
-        <input type="text" id="playerName" name="playerName" placeholder="e.g., MegaBidder9000" maxlength="20" autocomplete="off" inputmode="text" enterkeyhint="next" required aria-required="true">
+        <input type="text" id="playerName" name="playerName" placeholder="e.g., MegaBidder9000" maxlength="20" autocomplete="off">
       </div>
       <div class="input-group">
         <label for="adContent">Your Winning Ad Message</label>
-        <input type="text" id="adContent" name="adContent" placeholder="e.g., Best DSP in town! 🚀" maxlength="60" autocomplete="off" inputmode="text" enterkeyhint="go" required aria-required="true">
+        <input type="text" id="adContent" name="adContent" placeholder="e.g., Best DSP in town!" maxlength="60" autocomplete="off">
         <small class="input-hint">This becomes a generated ad on the big screen!</small>
       </div>
       <button type="submit" class="btn-join" id="joinBtn">Enter the Arena</button>
