--- a/public/host.html
+++ b/public/host.html
@@ -50,6 +50,23 @@
           </div>
         </div>
       </section>
+
+      <!-- Live Status Panel -->
+      <section class="card" aria-labelledby="status-panel-title" style="margin-top: 1.5rem;">
+        <h2 id="status-panel-title">📊 Live Status</h2>
+        <div class="status-panel">
+          <div class="connection-status" id="connectionStatus">
+            <span class="connection-dot disconnected" id="connectionDot"></span>
+            <span id="connectionText">Connecting...</span>
+          </div>
+          <div class="status-log" id="statusLog" aria-live="polite" aria-label="Event log">
+            <div class="log-entry info">Waiting for connection...</div>
+          </div>
+          <button class="btn btn-clear-log" onclick="clearLog()" style="margin-top: 0.5rem; padding: 0.5rem 1rem; font-size: 0.75rem;">
+            Clear Log
+          </button>
+        </div>
+      </section>
     </div>
   </main>
 
